src/definitions/modules/modal.less
/* ... */
@media only screen and (min-width : @largeMonitorBreakpoint) {
  .ui.modal:not(.fullscreen) {
    width: @largeMonitorWidth;
    margin: @largeMonitorMargin;
  }
}
@media only screen and (min-width : @widescreenMonitorBreakpoint) {
  .ui.modal:not(.fullscreen) {
    width: @widescreenMonitorWidth;
    margin: @widescreenMonitorMargin;
  }
}

/* Tablet and Mobile */
@media only screen and (max-width : @largestTabletScreen) {
  .ui.modal > .header {
    padding-right: @closeHitbox;
  }
  .ui.modal > .close {
    top: @innerCloseTop;
    right: @innerCloseRight;
    color: @innerCloseColor;
  }
}

/* Mobile */
@media only screen and (max-width : @largestMobileScreen) {

  .ui.modal > .header {
    padding: @mobileHeaderPadding !important;
    padding-right: @closeHitbox !important;
  }
  .ui.overlay.fullscreen.modal > .content.content.content {
    min-height: @overlayFullscreenScrollingContentMaxHeightMobile;
  }
  .ui.overlay.fullscreen.modal > .scrolling.content.content.content {
    max-height: @overlayFullscreenScrollingContentMaxHeightMobile;
  }
  .ui.modal > .content {
    display: block;
    padding: @mobileContentPadding !important;
  }
  .ui.modal > .close {
    top: @mobileCloseTop !important;
    right: @mobileCloseRight !important;
  }

  /*rtl:ignore*/
  .ui.modal .image.content {
    flex-direction: column;
  }
  .ui.modal .content > .image {
    display: block;
    max-width: 100%;
    margin: 0 auto !important;
    text-align: center;
    padding: @mobileImagePadding !important;
  }
  .ui.modal > .content > .image > i.icon {
    font-size: @mobileImageIconSize;
    text-align: center;
  }

  /*rtl:ignore*/
  .ui.modal .content > .description {
    display: block;
    width: 100% !important;
    margin: 0 !important;
    padding: @mobileDescriptionPadding !important;
    box-shadow: none;
  }

  /* Let Buttons Stack */
  .ui.modal > .actions {
    padding: @mobileActionPadding !important;
  }
  .ui.modal .actions > .buttons,
  .ui.modal .actions > .button {
    margin-bottom: @mobileButtonDistance;
  }
}

/*--------------
    Coupling
---------------*/

.ui.inverted.dimmer > .ui.modal {
  box-shadow: @invertedBoxShadow;
}

/*******************************
             Types
*******************************/
& when (@variationModalBasic) {
  .ui.basic.modal {
    background-color: transparent;
    border: none;
    border-radius: 0;
    box-shadow: none !important;
    color: @basicModalColor;
  }
  .ui.basic.modal > .header,
  .ui.basic.modal > .content,
  .ui.basic.modal > .actions {
    background-color: transparent;
  }
  .ui.basic.modal > .header {
    color: @basicModalHeaderColor;
    border-bottom: none;
  }
  .ui.basic.modal > .close {
    top: @basicModalCloseTop;
    right: @basicModalCloseRight;
    color: @basicInnerCloseColor;
  }
  .ui.inverted.dimmer > .basic.modal {
    color: @basicInvertedModalColor;
  }
  .ui.inverted.dimmer > .ui.basic.modal > .header {
    color: @basicInvertedModalHeaderColor;
  }
}

& when (@variationModalLegacy) {
  /* Resort to margin positioning if legacy */
  .ui.legacy.legacy.modal,
  .ui.legacy.legacy.page.dimmer > .ui.modal {
    left: 50% !important;
  }
  .ui.legacy.legacy.modal:not(.aligned),
  .ui.legacy.legacy.page.dimmer > .ui.modal:not(.aligned) {
    top: 50%;
  }
  .ui.legacy.legacy.page.dimmer > .ui.scrolling.modal:not(.aligned),
  .ui.page.dimmer > .ui.scrolling.legacy.legacy.modal:not(.aligned),
  .ui.top.aligned.legacy.legacy.page.dimmer > .ui.modal:not(.aligned),
  .ui.top.aligned.dimmer > .ui.legacy.legacy.modal:not(.aligned) {
    top: auto;
  }
  & when (@variationModalOverlay) {
    .ui.legacy.overlay.fullscreen.modal {
      margin-top: -@scrollingMargin !important;
    }
  }
}

/*******************************
             States
*******************************/

.ui.loading.modal {
  display: block;
  visibility: hidden;
  z-index: @loadingZIndex;
}

.ui.active.modal {
  display: block;
}

/*******************************
           Variations
*******************************/

& when (@variationModalAligned) {
  /*--------------
     Aligned
  ---------------*/

  .modals.dimmer .ui.top.aligned.modal {
    top: @topAlignedMargin;
  }
  .modals.dimmer .ui.bottom.aligned.modal {
    bottom: @bottomAlignedMargin;
  }

  @media only screen and (max-width : @largestMobileScreen) {
    .modals.dimmer .ui.top.aligned.modal {
      top: @mobileTopAlignedMargin;
    }
    .modals.dimmer .ui.bottom.aligned.modal {
      bottom: @mobileBottomAlignedMargin;
    }
  }
}

& when (@variationModalScrolling) {
  /*--------------
      Scrolling
  ---------------*/

  /* Scrolling Dimmer */
  .scrolling.dimmable.dimmed {
    overflow: hidden;
  }
  .scrolling.dimmable > .dimmer {
    justify-content: flex-start;
    position: fixed;
  }
  .scrolling.dimmable.dimmed > .dimmer {
    overflow: auto;
    -webkit-overflow-scrolling: touch;
  }
  .modals.dimmer .ui.scrolling.modal:not(.fullscreen) {
    margin: @scrollingMargin auto;
  }
/* Fix for Firefox, Edge, IE11 */
.modals.dimmer .ui.scrolling.modal:not([class*="overlay fullscreen"])::after {
  content:'\00A0';
  position: absolute;
  height: @scrollingMargin;
}
  /* Undetached Scrolling */
  .scrolling.undetached.dimmable.dimmed {
    overflow: auto;
    -webkit-overflow-scrolling: touch;
  }
  .scrolling.undetached.dimmable.dimmed > .dimmer {
    overflow: hidden;
  }
  .scrolling.undetached.dimmable .ui.scrolling.modal:not(.fullscreen) {
    position: absolute;
    left: 50%;

  }

  /* Scrolling Content */
  .ui.modal > .scrolling.content {
    max-height: @scrollingContentMaxHeight;
    overflow: auto;
  }
}

& when (@variationModalOverlay) {
  .ui.overlay.fullscreen.modal > .content {
    min-height: @overlayFullscreenScrollingContentMaxHeight;
  }
  .ui.overlay.fullscreen.modal > .scrolling.content {
    max-height: @overlayFullscreenScrollingContentMaxHeight;
  }
}
/* ... */

